chore: dedicated gears scheduler